--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -6,8 +6,15 @@ h1 {
   font-size: 70px;
   font-weight: bold;
   color: white;
+  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
 }
-.links {
+a {
   font-size: 18px;
   color: white;
+}
+#new-york {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+}
+.links a {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
 }
